<resources>
    <string name="app_name">2 Fast Fingers</string>

    <!--    main activity-->
    <string name="sidebar_btn"><![CDATA[≡]]></string>
    <string name="about_sidebar_btn">about</string>
    <string name="leaderboard_sidebar_btn">leaderboard</string>

    <string name="main_fragment_title">2 Fast Fingers</string>

    <string name="back_btn"><![CDATA[<]]></string>
    <string name="app_version">v1.1 - 6/11/19\nv1.0 - 1/11/19</string>
    <string name="start_btn">start</string>
    <string name="refresh_btn">⟲</string>
    <string name="init_timer">59</string>
    <string name="main_menu">main menu</string>
    <string name="language_toggle">Change Language</string>

    <!--play activity-->
    <string name="share">Share</string>
    <string name="sample_result">50 WPM</string>
    <string name="try_again_btn">try again</string>
    <string name="score_result">WPM</string>
    <string name="timer_display">%ds</string>
    <string name="exit_play">x</string>
    <string name="WPMstand">(words per minute)</string>
    <string name="title_share">Choose an app</string>
    <string name="top_10_score">Top 10 Score</string>
    <string name="incoming_call_detected">INCOMING CALL DETECTED</string>
    <string name="resume_btn">RESUME</string>
    <string name="no_internet_msg">You need internet connection to share</string>
    <string name="ignore">Ignore</string>
    <string name="ok">Ok</string>
    <string name="why_need_phone_perm">Please accept phone permission for pausing the game while incoming call detected.</string>

    <string name="is_running">2 fast fingers is running. Open to continue!</string>
    <string name="second_left">second left</string>
</resources>
