<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="resultInterface"
            type="id.ac.ui.cs.mobileprogramming.yusuftriardho.twofastfingers.interfaces.fragments.ResultInterface" />
        <variable
            name="playViewModel"
            type="id.ac.ui.cs.mobileprogramming.yusuftriardho.twofastfingers.viewmodels.PlayViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{playViewModel.getResultText()}"
            android:textSize="70sp"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17000002" />

        <TextView
            android:id="@+id/WPMstand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WPMstand"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/score"
            app:layout_constraintStart_toStartOf="@+id/score"
            app:layout_constraintTop_toBottomOf="@+id/score"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/main_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/main_menu"
            android:onClick="@{() -> resultInterface.onClickMenu()}"
            app:layout_constraintEnd_toEndOf="@+id/score"
            app:layout_constraintStart_toStartOf="@+id/score"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <Button
            android:id="@+id/try_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/try_again_btn"
            android:onClick="@{() -> resultInterface.onClickRetry()}"
            app:layout_constraintEnd_toEndOf="@+id/main_menu_btn"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/main_menu_btn"
            app:layout_constraintTop_toBottomOf="@+id/main_menu_btn" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/share"
            android:onClick="@{() -> resultInterface.onClickShare()}"
            app:layout_constraintEnd_toEndOf="@+id/try_again_btn"
            app:layout_constraintStart_toStartOf="@+id/try_again_btn"
            app:layout_constraintTop_toBottomOf="@+id/try_again_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>